<resources>
    <string name="app_name">Memory_Jogger</string>
    <string name="start">start</string>
    <string name="_0">0</string>
    <string name="score">score:</string>
    <string name="title">Memory Jogger</string>
    <string name="highscore">score</string>
    <string name="scoreNum">0</string>
    <string name="play">PLAY</string>
    <string name="highscores">highscores</string>
    <string name="standard">standard</string>
    <string name="endless">endless</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="player">player</string>
    <string name="back">back</string>
    <string name="title_activity_set_high_score">setHighScoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_score">your score</string>
    <string name="your_name">your name</string>
    <string name="submit">submit</string>
    <string name="play_again">play again</string>
    <string name="reset_scores">reset scores</string>
    <string name="how_to_play">how to play</string>
    <string name="mainInstructions">tap on the squares in the same sequence that is shown to you</string>
    <string name="get_10_buttons_in_a_row_without_messing_up">get 10 buttons in a row without messing up!</string>
    <string name="there_s_no_end_to_the_madness_keep_going_until_you_lose">there\'s no end to the madness! keep going until you lose!</string>
    <string name="pick_your_mode">pick your mode</string>
    <string name="nothing_to_see_here_go_play_a_game_and_set_a_high_score">nothing to see here! go play a game and set a high score!</string>
</resources>
