<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".playActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Memory Jogger" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="225dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/blueButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="110dp"
                android:layout_height="175dp"
                android:background="#3349FF" />

            <Button
                android:id="@+id/redButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="110dp"
                android:layout_height="175dp"
                android:background="#FF4933" />

            <Button
                android:id="@+id/pinkButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="110dp"
                android:layout_height="175dp"
                android:layout_weight="1"
                android:background="#FF33DA" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/greenButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:background="#33FF46" />

            <Button
                android:id="@+id/yellowButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="110dp"
                android:layout_height="175dp"
                android:background="#D7FF33" />

            <Button
                android:id="@+id/cyanButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="110dp"
                android:layout_height="175dp"
                android:layout_weight="1"
                android:background="#33FFE4" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/button_pressed"
        android:fontFamily="@font/holtwood_one_sc"
        android:gravity="center"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/scoreNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/scoreNum"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        tools:text="Score: 0" />

</androidx.constraintlayout.widget.ConstraintLayout>